# wlr-randr

./: .gitignore  LICENSE  README.md  main.c  meson.build
protocol/: meson.build
